<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#031E33"
    android:gravity="center"
    android:visibility="visible"
    tools:context="comp3350.exampool.presentation.MultipleChoiceActivity"
    tools:visibility="visible">

    <include layout="@layout/invalid_add" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="556dp"
        android:background="#031E33"
        android:gravity="center"
        android:orientation="vertical"
        android:saveEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <GridLayout
            android:id="@+id/grid"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="204dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="112dp"
            android:columnCount="2">

            <TextView
                android:id="@+id/answer"
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginBottom="10dp"
                android:ems="12"
                android:enabled="true"
                android:text="Answer:"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/createAnswer"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/white"
                android:ems="12"
                android:enabled="true"
                android:hint="Type Answer"
                android:textColorHint="#5ED3D3D3"
                android:inputType="textNoSuggestions" />


            <TextView
                android:id="@+id/option1"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="12"
                android:enabled="true"
                android:text="Options:"
                android:textColor="@color/white"
                android:textSize="20dp" />



            <EditText
                android:id="@+id/createChoice1"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/white"
                android:ems="12"
                android:enabled="true"
                android:hint="Type Choice (incorrect answer)"
                android:textColorHint="#5ED3D3D3"
                android:inputType="textNoSuggestions" />

            <TextView
                android:id="@+id/option2"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="12"
                android:enabled="true"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/createChoice2"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/white"
                android:ems="12"
                android:enabled="true"
                android:hint="Type Choice (incorrect answer)"
                android:textColorHint="#5ED3D3D3"
                android:inputType="textNoSuggestions"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/option3"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="12"
                android:enabled="true"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/createChoice3"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/white"
                android:textColorHint="#5ED3D3D3"
                android:ems="12"
                android:enabled="true"
                android:hint="Type Choice (incorrect answer)"
                android:inputType="textNoSuggestions"
                android:textColor="@color/white" />

        </GridLayout>

        <EditText
            android:id="@+id/createQuestion"
            android:layout_width="277dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="67dp"
            android:layout_marginTop="77dp"
            android:layout_marginEnd="66dp"
            android:backgroundTint="@color/white"
            android:hint="Question?"
            android:textAlignment="center"
            android:textColor="#EDE7E7"
            android:textColorHint="#5ED3D3D3"
            android:textSize="25sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="-1dp"
            android:layout_marginBottom="509dp">

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:onClick="buttonClearOnClick"
                android:text="Clear"
                android:background="@drawable/custom_button"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/buttonCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:enabled="true"
                android:onClick="buttonCreateOnClick"
                android:text="Create"
                android:background="@drawable/custom_button"
                android:textColor="@color/white"/>


        </RelativeLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>