...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ListView
            android:id="@+id/listNotes"
            android:layout_width="344dp"
            android:layout_height="604dp"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:choiceMode="singleChoice" />
    </RelativeLayout>
...
