<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context="comp3350.exampool.presentation.QuizComplete">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="720dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/completedMessage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="Quiz Completed!"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:textSize="40dp" />


        <TextView
            android:id="@+id/scoreTotal"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textSize="40dp"
            android:text="Score" />

        <Button
            android:id="@+id/buttonRestartQuiz"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:textSize="20dp"
            android:onClick="buttonRestartQuizOnClick"
            android:text="Restart Quiz"/>

    </LinearLayout>
</LinearLayout>
