...
            android:gravity="center"
            android:text="EXAMPOOL"
            android:textColor="#9457eb"
            android:textSize="25sp"></TextView>

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:clickable="true"
            android:onClick="buttonDeleteOnClick"
            android:text="Delete"
            android:textColor="@color/white"
            android:visibility="visible" />

        <Button
            android:id="@+id/backButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:clickable="true"
            android:onClick="buttonSaveOnClick"
            android:layout_alignParentRight="true"
...
